--- a/index.html
+++ b/index.html
@@ -119,48 +119,46 @@
                         <option value="https://within-herd-pitch.quicknode-ipfs.com">quicknode-within</option>
                         
                         <!-- ETH related gateways -->
-                        <option value="https://within-herd-pitch.quicknode-ipfs.com">quicknode-within</option>
-                        <option value="https://ipfs-01.ethquokkaops.io">ethquokkaops-01</option>
-                        <!-- ETH related gateways -->2.ethquokkaops.io">ethquokkaops-02</option>
-                        <option value="https://eth.sucks">eth.sucks</option>-filebase</option>
+                        <option value="https://eth.sucks">eth.sucks</option>
                         <option value="https://ipfs-01.ethquokkaops.io">ethquokkaops-01</option>
                         <option value="https://ipfs-02.ethquokkaops.io">ethquokkaops-02</option>
                         <option value="https://filebase.truffle.wtf">truffle-filebase</option>
-                        <option value="https://ipfs.forma.art">forma.art</option>
-                        <!-- Other gateways -->i18n.opendreamnet.com">opendreamnet</option>
-                        <option value="https://ipfs-gateway.gifted.art">gifted.art</option>narchist-archive</option>
+                        
+                        <!-- Other gateways -->
+                        <option value="https://ipfs-gateway.gifted.art">gifted.art</option>
                         <option value="https://ipfs.forma.art">forma.art</option>
                         <option value="https://i18n.opendreamnet.com">opendreamnet</option>
                         <option value="https://gateway.ipfs.anarchiststickersarchive.org">anarchist-archive</option>
-                        <option value="https://ipfs.ftso.best">ftso.best</option>ption>
-                        <option value="https://ipfs.distri.ai">distri.ai</option>/option>
-                        <option value="https://ipfs.dekart.io">dekart.io</option>ta</option>
-                        <option value="https://ipfs.allgram.best">allgram.best</option>ion>
+                        <option value="https://ipfs.ftso.best">ftso.best</option>
+                        <option value="https://ipfs.distri.ai">distri.ai</option>
+                        <option value="https://ipfs.dekart.io">dekart.io</option>
+                        <option value="https://ipfs.allgram.best">allgram.best</option>
                         <option value="https://ipfs.metaversis.io">metaversis.io</option>
                         <option value="https://ipfs-internal.xnftdata.com">xnftdata</option>
                         <option value="https://ipfs-12.yoghourt.cloud">yoghourt-12</option>
-                    </select>></div>
+                    </select>
                 </div>
             </div>
-            <div class="list"></div>:fixed;width: 100%;text-align: center;bottom: 0px;display: block;">
-        </div>tyle="height: auto; padding: 5px 0;">
-    </div>  <div class="info">
-    <div id="footer" style="position:fixed;width: 100%;text-align: center;bottom: 0px;display: block;">ght: 5px;"></i>项目地址</a> | 
-        <div style="height: auto; padding: 5px 0;">n/"><i class="fas fa-network-wired" style="margin-right: 5px;"></i>更多网关</a>
+            <div class="list"></div>
+        </div>
+    </div>
+    <div id="footer" style="position:fixed;width: 100%;text-align: center;bottom: 0px;display: block;">
+        <div style="height: auto; padding: 5px 0;">
             <div class="info">
                 <a href="https://github.com/bestZwei/ipfsbed"><i class="fab fa-github" style="margin-right: 5px;"></i>项目地址</a> | 
                 <a href="https://check.ipfs.winx.run/"><i class="fas fa-network-wired" style="margin-right: 5px;"></i>更多网关</a>
             </div>
             © 2021-2025 IPFSBED - 基于IPFS的去中心化文件托管服务
-        </div>tialize language after DOM is ready
-    </div>cument.addEventListener('DOMContentLoaded', function() {
-    <script>// Set the language selector to the current language
-        // Initialize language after DOM is ready.value = currentLang;
+        </div>
+    </div>
+    <script>
+        // Initialize language after DOM is ready
         document.addEventListener('DOMContentLoaded', function() {
             // Set the language selector to the current language
             document.querySelector('#langSelect').value = currentLang;
             // Update all UI elements with translations
             updatePageLanguage();
-            // Set the gateway label with HTML
-            document.getElementById('gatewaySelectLabel').innerHTML = _t('gateway-selector');        });    </script></body>
+        });
+    </script>
+</body>
 </html>
