--- a/index.html
+++ b/index.html
@@ -79,11 +79,7 @@
             </div>
             <!-- 新增：设置口令栏 -->
             <div class="passphrase-bar">
-                <label class="switch">
-                    <input type="checkbox" id="passphraseToggle">
-                    <span class="slider"></span>
-                </label>
-                <input type="text" id="passphraseInput" placeholder="设置口令…" disabled>
+                <input type="text" id="passphraseInput" placeholder="设置口令（留空则不启用）">
             </div>
             <div class="content" id="dragbox">
                 <svg class="icon" viewBox="0 0 1335 1024" xmlns="http://www.w3.org/2000/svg" aria-label="上传文件图标">
