--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./static/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="./static/langs.js"></script>
     <script src="./static/file.js" defer></script>
     <script defer src="https://umami.zwei.de.eu.org/script.js" data-website-id="9377510d-06c4-40da-ba16-c7442815c04c"></script>
@@ -79,7 +80,7 @@
             </div>
             <!-- 新增：设置口令栏 -->
             <div class="passphrase-bar">
-                <input type="text" id="passphraseInput" placeholder="设置口令（留空则不启用）">
+                <input type="password" id="passphraseInput" data-translate-placeholder="passphrase-placeholder" placeholder="设置口令（可选，留空则公开）">
             </div>
             <div class="content" id="dragbox">
                 <svg class="icon" viewBox="0 0 1335 1024" xmlns="http://www.w3.org/2000/svg" aria-label="上传文件图标">
@@ -153,6 +154,18 @@
                 <a href="https://check.ipfs.winx.run/"><i class="fas fa-network-wired" style="margin-right: 5px;"></i>更多网关</a>
             </div>
             © 2021-2025 IPFSBED - 基于IPFS的去中心化文件托管服务
+        </div>
+    </div>
+    <!-- Hidden section for passphrase prompt when accessing a shared link -->
+    <div id="shareAccessPrompt" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); z-index: 1000; align-items: center; justify-content: center;">
+        <div style="background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 15px rgba(0,0,0,0.2); text-align: center;">
+            <h3 data-translate="passphrase-prompt-title">Enter Passphrase</h3>
+            <div>
+                <label for="accessPassphraseInput" data-translate="passphrase-prompt-label">Passphrase:</label>
+                <input type="password" id="accessPassphraseInput" style="margin: 10px 0; padding: 8px; width: 200px; border: 1px solid #ccc; border-radius: 4px;">
+            </div>
+            <button id="submitAccessPassphrase" data-translate="passphrase-submit" style="padding: 10px 20px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">Unlock</button>
+            <p id="passphraseError" style="color: red; margin-top: 10px;"></p>
         </div>
     </div>
     <script>
