--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
     <!-- Hidden section for passphrase prompt when accessing a shared link -->
     <div id="shareAccessPrompt">
-        <div>
+        <div class="prompt-box">
             <h3 data-translate="passphrase-prompt-title">Enter Passphrase</h3>
             <div>
                 <label for="accessPassphraseInput" data-translate="passphrase-prompt-label">Passphrase:</label>
