style: update download button text and progress messages for improved clarity in batch sharing

--- a/batch-share.html
+++ b/batch-share.html
@@ -1126,10 +1126,10 @@
             document.getElementById('batchGatewaySelectLabel').innerHTML = _t('gateway-selector');
             document.getElementById('selectAllBtnText').textContent = _t('select-all');
             document.getElementById('deselectAllBtnText').textContent = _t('deselect-all-btn') || 'Deselect All';
-            document.getElementById('downloadAllBtnText').textContent = _t('download-all-btn') || 'Download Selected';
+            document.getElementById('downloadAllBtnText').textContent = _t('download-button') || 'Download';
             document.getElementById('copyAllBtnText').textContent = _t('copy-all');
             document.getElementById('batchReturnHomeText').textContent = _t('return-home');
-            document.getElementById('downloadDialogTitle').textContent = _t('download-success') || 'Downloading Files';
+            document.getElementById('downloadDialogTitle').textContent = _t('download-progress') || 'Downloading Files';
             document.getElementById('downloadCancel').textContent = _t('batch-share-cancel');
         }
 
