--- a/share.html
+++ b/share.html
@@ -611,7 +611,7 @@
             const passInput = document.getElementById('passphrase');
             if (passInput) passInput.placeholder = _t('passphrase-placeholder');
             document.getElementById('unlockButton').textContent = _t('passphrase-submit');
-            document.getElementById('downloadButtonText').textContent = _t('download-success') || 'Get File';
+            document.getElementById('downloadButtonText').textContent = _t('download-button') || 'Download';
             document.getElementById('returnHomeText').textContent = _t('return-home');
             // 网关选择器标签
             document.getElementById('shareGatewaySelectLabel').innerHTML = _t('gateway-selector');
