--- a/share.html
+++ b/share.html
@@ -749,12 +749,12 @@
                 passwordInput.type = 'text';
                 icon.classList.remove('fa-eye');
                 icon.classList.add('fa-eye-slash');
-                toggleButton.title = 'Hide Password';
+                toggleButton.title = _t('hide-password');
             } else {
                 passwordInput.type = 'password';
                 icon.classList.remove('fa-eye-slash');
                 icon.classList.add('fa-eye');
-                toggleButton.title = 'Show Password';
+                toggleButton.title = _t('show-password');
             }
         }
         
