--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
             }
         }
     </style>
+    <style>
+        #shareAccessPrompt { display: none; }
+    </style>
 </head>
 <body>
     <input id="file" type="file" multiple style="display: none;">
@@ -329,7 +332,6 @@
                     </div>
                     <button id="shareSelected" class="action-button disabled" data-translate="share-selected">批量分享</button>
                     <a href="javascript:void(0);" class="copyall action-button disabled" onclick="copyAllLinks()" title="复制所有链接">
-                        <i class="fas fa-copy"></i>
                         <span data-translate="copy-all">复制全部</span>
                     </a>
                 </div>
