--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     
     <link rel="shortcut icon" href="/img/ipfsbed.png">
     <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="./static/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
