--- a/index.html
+++ b/index.html
@@ -431,15 +431,15 @@
                     <path d="M1097.060174 392.125217C1073.730783 172.966957 893.261913 0.378435 666.089739 0.378435c-227.127652 0-415.610435 171.920696-430.948174 391.746782C101.910261 415.454609 0 525.356522 0 666.601739c0 149.147826 125.239652 274.476522 274.476522 274.476522h195.828869v-78.669913H274.476522a193.691826 193.691826 0 0 1-195.940174-195.806609c0-102.021565 70.678261-180.580174 172.588522-195.917913l54.561391-8.013913 8.013913-62.553043c16.005565-180.580174 172.588522-321.157565 352.389565-321.157566 180.580174 0 337.029565 141.356522 352.389565 321.157566v62.553043l62.664348 8.013913c101.910261 16.005565 172.477217 93.896348 172.477218 195.917913 0 109.901913-85.904696 195.806609-195.806609 195.806609h-195.917913v78.580869h196.029217c149.147826 0 274.476522-125.261913 274.476522-274.476521 0-141.133913-101.999304-259.072-235.25287-274.387479" fill="#909399"></path>
                     <path d="M612.218435 364.766609l1.335652 2.003478L389.698783 590.58087l55.229217 55.362782 181.938087-181.938087V1018.88h78.558609v-78.58087h156.471652-156.471652V458.039652l183.808 183.919305 55.340521-55.340522-277.147826-277.058783-55.229217 55.229218z m-141.913044 575.666087h156.471652-156.716521 0.222608z" fill="#909399"></path>
                 </svg>
-                <p class="desc">点击上传 / 粘贴上传 / 拖拽上传</p>
-                <p class="desc">去中心化保存和共享文件</p>
+                <p class="desc" data-translate="drop-zone">点击上传 / 粘贴上传 / 拖拽上传</p>
+                <p class="desc" data-translate="drop-zone-desc">去中心化保存和共享文件</p>
             </div>
         </div>
         <div class="filelist">
             <div class="title">
                 <span class="title-text">
                     <i class="fas fa-list-ul" style="margin-right: 8px;"></i>
-                    上传列表
+                    <span data-translate="upload-list">上传列表</span>
                 </span>
                 <div class="batch-actions">
                     <div class="toggle-all-wrapper">
@@ -458,10 +458,10 @@
     <div id="footer">
         <div>
             <div class="info">
-                <a href="https://github.com/bestZwei/ipfsbed"><i class="fab fa-github" style="margin-right: 5px;"></i>项目地址</a> | 
-                <a href="https://check.ipfs.winx.run/"><i class="fas fa-network-wired" style="margin-right: 5px;"></i>更多网关</a>
+                <a href="https://github.com/bestZwei/ipfsbed"><i class="fab fa-github" style="margin-right: 5px;"></i><span data-translate="project-repo">项目地址</span></a> | 
+                <a href="https://check.ipfs.winx.run/"><i class="fas fa-network-wired" style="margin-right: 5px;"></i><span data-translate="more-gateways">更多网关</span></a>
             </div>
-            © 2021-2025 IPFSBED - 基于IPFS的去中心化文件托管服务
+            <span data-translate="copyright-text">© 2021-2025 IPFSBED - 基于IPFS的去中心化文件托管服务</span>
         </div>
     </div>
     <!-- Hidden section for passphrase prompt when accessing a shared link -->
