--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         
         .lang-icon:hover {
             background-color: #f0f8ff;
-            transform: translateY(-2px);
+            transform: translateY(-52%); 
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         }
         
