测试：下载按钮

--- a/share.html
+++ b/share.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 
-                <a href="#" class="download-button" id="downloadButton">
+                <a class="download-button" id="downloadButton" data-url="">
                     <i class="fas fa-download" style="margin-right: 8px;"></i><span id="downloadButtonText"></span>
                 </a>
             </div>
