--- a/share.html
+++ b/share.html
@@ -26,7 +26,7 @@
             <!-- Loading indicator -->
             <div class="loading" id="loadingIndicator">
                 <div class="spinner"></div>
-                <p id="loadingText"></p>
+                <p id="loadingText">Loading...</p>
             </div>
             
             <!-- Passphrase form (shown for encrypted files) -->
