--- a/share.html
+++ b/share.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="./static/langs.js"></script>
     <script src="./static/common.js"></script>
-    <script src="./static/share.js"></script>
+    <script src="./static/share.js" defer></script>
 </head>
 <body>
     <div class="share-container">
@@ -65,6 +65,17 @@
                 <a class="download-button" id="downloadButton" data-url="">
                     <i class="fas fa-download" style="margin-right: 8px;"></i><span id="downloadButtonText"></span>
                 </a>
+            </div>
+
+            <!-- Add sponsor section before footer -->
+            <div class="sponsor-section">
+                <div class="sponsor-content">
+                    <span data-translate="sponsor-text">本项目由</span>
+                    <a href="https://yxvm.com/" target="_blank" rel="noopener noreferrer" class="sponsor-link">YXVM</a>
+                    <span data-translate="sponsor-and">和</span>
+                    <a href="https://support.nodeseek.com/" target="_blank" rel="noopener noreferrer" class="sponsor-link">NodeSupport</a>
+                    <span data-translate="sponsor-sponsored">赞助</span>
+                </div>
             </div>
         </div>
         
