feat: add Umami analytics script to batch-share and share pages

--- a/batch-share.html
+++ b/batch-share.html
@@ -16,6 +16,7 @@
     <script src="./static/langs.js"></script>
     <script src="./static/common.js"></script>
     <script src="./static/batch-share.js"></script>
+    <script defer src="https://umami.zwei.de.eu.org/script.js" data-website-id="9377510d-06c4-40da-ba16-c7442815c04c"></script>
 </head>
 <body>
     <div class="batch-share-container">
