--- a/share.html
+++ b/share.html
@@ -14,6 +14,7 @@
     <script src="./static/langs.js"></script>
     <script src="./static/common.js"></script>
     <script src="./static/share.js"></script>
+    <script defer src="https://umami.zwei.de.eu.org/script.js" data-website-id="9377510d-06c4-40da-ba16-c7442815c04c"></script>
 </head>
 <body>
     <div class="share-container">
