--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
             <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="32" height="32">
             IPFSBED
         </div>
-        <div class="lang-icon" id="langToggle">
-            <i class="fas fa-globe"></i>
+        <div class="header-nav">
+            <a href="./history.html" class="nav-link">
+                <i class="fas fa-history"></i>
+                <span data-translate="upload-history">上传历史</span>
+            </a>
+            <div class="lang-icon" id="langToggle">
+                <i class="fas fa-globe"></i>
+            </div>
         </div>
         <div class="lang-dropdown" id="langDropdown">
             <a href="#" data-lang="zh-CN" class="active">中文</a>
