--- a/history.html
+++ b/history.html
@@ -20,8 +20,14 @@
             <img src="/img/ipfsbed.png" alt="IPFSBED Logo" width="32" height="32">
             IPFSBED
         </div>
-        <div class="lang-icon" id="langToggle">
-            <i class="fas fa-globe"></i>
+        <div class="header-nav">
+            <a href="./index.html" class="nav-link">
+                <i class="fas fa-home"></i>
+                <span data-translate="return-home">返回首页</span>
+            </a>
+            <div class="lang-icon" id="langToggle">
+                <i class="fas fa-globe"></i>
+            </div>
         </div>
         <div class="lang-dropdown" id="langDropdown">
             <a href="#" data-lang="zh-CN" class="active">中文</a>
@@ -50,9 +56,6 @@
                     <i class="fas fa-upload"></i><span data-translate="import-history">Import</span>
                 </label>
                 <input type="file" id="importFile" accept=".json" style="display: none;">
-                <a href="./index.html" class="btn btn-primary">
-                    <i class="fas fa-home"></i><span data-translate="return-home">Return Home</span>
-                </a>
             </div>
         </div>
 
