--- a/share.html
+++ b/share.html
@@ -14,6 +14,8 @@
     <script src="./static/langs.js"></script>
     <script src="./static/common.js"></script>
     <script src="./static/share.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
     <script defer src="https://umami.zwei.de.eu.org/script.js" data-website-id="9377510d-06c4-40da-ba16-c7442815c04c"></script>
 </head>
 <body>
