--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="./static/langs.js"></script>
     <script src="./static/common.js"></script>
+    <script src="./static/history.js"></script>
     <script src="./static/file.js" defer></script>
     <script defer src="https://umami.zwei.de.eu.org/script.js" data-website-id="9377510d-06c4-40da-ba16-c7442815c04c"></script>
     
