Add folder filter option and related translations in history and batch share

--- a/history.html
+++ b/history.html
@@ -101,6 +101,7 @@
             <div class="filter-controls">
                 <select id="typeFilter">
                     <option value="all" data-translate="filter-all">All Types</option>
+                    <option value="folders" data-translate="folder-type">Folders</option>
                     <option value="images" data-translate="filter-images">Images</option>
                     <option value="videos" data-translate="filter-videos">Videos</option>
                     <option value="documents" data-translate="filter-documents">Documents</option>
