--- a/share.html
+++ b/share.html
@@ -30,6 +30,10 @@
             <div class="loading" id="loadingIndicator">
                 <div class="spinner"></div>
                 <p id="loadingText"></p>
+                <button class="cancel-download-btn" id="cancelDownload" style="display: none;">
+                    <i class="fas fa-times"></i>
+                    <span data-translate="cancel-download">取消下载</span>
+                </button>
             </div>
             
             <!-- Passphrase form (shown for encrypted files) -->
