feat: implement cancel loading functionality and update button styles for batch and single file downloads

--- a/batch-share.html
+++ b/batch-share.html
@@ -30,9 +30,9 @@
             <div class="loading" id="loadingIndicator">
                 <div class="spinner"></div>
                 <p id="batchLoadingText"></p>
-                <button class="cancel-download-btn" id="cancelSingleDownload" style="display: none;">
+                <button class="loading-cancel" id="loadingCancelBtn" onclick="cancelBatchLoading()">
                     <i class="fas fa-times"></i>
-                    <span data-translate="cancel-download">取消下载</span>
+                    <span data-translate="loading-cancel">取消</span>
                 </button>
             </div>
             
