--- a/share.html
+++ b/share.html
@@ -30,9 +30,9 @@
             <div class="loading" id="loadingIndicator">
                 <div class="spinner"></div>
                 <p id="loadingText"></p>
-                <button class="cancel-download-btn" id="cancelDownload" style="display: none;">
+                <button class="loading-cancel" id="loadingCancelBtn" onclick="cancelLoading()">
                     <i class="fas fa-times"></i>
-                    <span data-translate="cancel-download">取消下载</span>
+                    <span data-translate="loading-cancel">取消</span>
                 </button>
             </div>
             
